# zkboo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: sha256.rs
src/: circuit.rs  commitment.rs  composition.rs  config.rs  data_structures.rs  error.rs  fs.rs  gadgets.rs  gf2_word.rs  key.rs  lib.rs  multicore.rs  party.rs  prng.rs  prover.rs  tape.rs  verifier.rs  view.rs
src/examples/: adder.rs  mod.rs
src/gadgets/: add_mod.rs  mod.rs  prepare.rs  sha256.rs
src/gadgets/sha256/: ch.rs  compression.rs  final_digest.rs  iv.rs  maj.rs  msg_schedule.rs  padding.rs
src/gadgets/sha256/compression/: ch.rs  maj.rs  temp1.rs  temp2.rs  utils.rs
src/gadgets/sha256/test_vectors/: long.rs  mod.rs  short.rs
