[package]
name = "zkboo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.3"
rand = "0.8.5"
sha3 = "0.10.6"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]